--- a/Readme/Readme_ger.html
+++ b/Readme/Readme_ger.html
@@ -17,7 +17,7 @@
 <a href="#Gameplay">Gameplay</a> · 
 <a href="#F_A_Q_">F.A.Q.</a> · 
 <a href="#Known_bugs">Bekannte Fehler</a> · 
-<a href="#Server">Dedicated Server</a> · 
+<a href="#Server">Dedizierter Server</a> · 
 <a href="#Feedback">Feedback</a> · 
 <a href="#Source">Quelltext</a> · 
 <a href="#Credits">Credits</a> · 
@@ -31,25 +31,13 @@
             </tr>
           </table>
         </blockquote>
-        <p><font face="Calibri">KaM Remake (wir haben noch keinen besseren Titel) 
-          ist ein Versuch das originale &quot;Knights and Merchants: The Shattered 
-          Kingdom&quot; wiederzubeleben. Unsere Ziele sind es, das Spiel auf heutigen 
-          Computern und Betriebssystemen zum Laufen zu bringen, ebenso die vielen 
+        <p><font face="Calibri">Die KaM Remake Mod 
+          ist ein Versuch das originale &quot;Knights and Merchants: The Peasants Rebellion&quot; wiederzubeleben. Unsere Ziele sind es, das Spiel auf heutigen 
+          Computern und Betriebssystemen zum Laufen zu bringen, einen vollwertigen Multiplayermodus bereitzustellen und ebenso die vielen 
           Fehler im Spiel zu beheben. Um dies zu machen haben wir angefangen unseren 
           eigenen Code f&uuml;r die Engine zu schreiben, greifen jedoch auf viele 
-          originale Dateien zur&uuml;ck. Dies ist unsere &ouml;ffentlich begrenzte 
-          Technologievorschau (Demo) mit der wirtschaftlichen und der kriegerischen 
-          Seite des Spiels; bezeichnet als &quot;Modifikation&quot; oder &quot;Neuauflage&quot;. 
-          Unsere Absicht ist es, das Potenzial zu demonstrieren und Feedback &uuml;ber 
-          die Funktionalit&auml;t zu bekommen. Alle von KaM entlehnten &quot;Eigent&uuml;mer&quot; 
-          (Grafiken, Musik, Sounds, etc.) sind nur da, um die Absichten zu testen. 
-          Die finale Version wird keine, mit Copyright versehene, Dateien enthalten.<br>
-          Wir gehen davon aus, dass sie das originale KaM besitzen, andernfalls 
-          sollten sie es sich kaufen. </font><font face="Calibri">Es ist in mehreren 
-          Onlineshops verf&uuml;gbar.<br>
-          Die Kam Remake Exe-Datei ist Freeware und wurde von Liebhabern des Spiels 
-          erstellt. Die Anwendung benutzt:<br>
-          Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
+          originale Dateien zur&uuml;ck. Wir setzen voraus, dass ihr das original KaM Spiel besitzt (das Setup überprüft dies beim Installieren), andererseits m&uuml;sst ihr es vor der Installation kaufen. Ihr bekommt es u. a. bei amazon.de, ebay.de und im Zuxxez Shop.<br>
+          Das Spiel ist Freeware und von Liebhabern erstellt. Programme, die dazu benutzt werden: Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
             <tr> 
@@ -73,8 +61,7 @@
             </tr>
           </table>
         </blockquote>
-        <p><font face="Calibri"><B>1.</B> Entpackt alle Dateien aus dem Paket 
-          in einen neuen Ordner auf eurem PC.<br>
+        <p><font face="Calibri"><B>1.</B> F&uuml;hre den Installer aus und befolge die Anweisungen.<br>
           <B>2.</B> Das Paket beinhaltet die OpenAL Audiotreiber (<b>oalinst.exe</b>), 
           welche ihr installieren solltet um das KaM Remake zu spielen. Die neuste 
           Version kann unter der offiziellen OpenAL-Seite gefunden werden:<a href="http://connect.creativelabs.com/openal/default.aspx"> 
@@ -82,7 +69,7 @@
           <B>3.</B> Das Remake benutzt die OpenGL Rendering Engine, ihr m&uuml;sst 
           also die OpenGL-Treiber installiert haben. Besucht die Seite des Herstellers 
           eurer Grafikkarte um die neusten Treiber zu bekommen.<br>
-          <B>4.</B> Startet die Modifikation - KaM_Remake.exe.<br>
+          <B>4.</B> Startet die Modifikation - KaM_Remake.exe vom Desktop oder vom Startmenü aus.<br>
           &nbsp;</font></p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -92,20 +79,17 @@
             </tr>
           </table>
         </blockquote>
-        <p> <font face="Calibri"> <b>The following shortcuts are available in 
-          the game:</b><br>
-          <b>F8</b> erh&ouml;ht Spielgeschwindigkeit um x10<br>
-          <b>F11</b> zeigt Men&uuml; und Debugging Panel<br>
-          <b>1-4</b> &ouml;ffnet jeweilige Auswahl im Spielmen&uuml;<br>
+        <p> <font face="Calibri"> <b>Folgende Tastenkürzel sind verfügbar:</b><br>
+          <b>F8</b> erh&ouml;ht die Spielgeschwindigkeit um x10<br>
+          <b>F11</b> zeigt Men&uuml; und Debugging Panel an<br>
+          <b>1-4</b> &ouml;ffnet die jeweilige Auswahl im Spielmen&uuml;<br>
           <b>P</b> pausiert das Spiel<br>
-          <b>Esc</b> schlie&szlig;t offene Nachricht oder Auswahl<br>
-          <b>Enf</b> l&ouml;scht offene Nachricht<br>
+          <b>Esc</b> schlie&szlig;t eine offene Nachricht oder Auswahl<br>
+          <b>Enf</b> l&ouml;scht die angezeigte Nachricht<br>
           <b>Leertaste</b> bewegt das Sichtfeld zum Ort der letzten Nachricht<br>
           <b>&#8592;&#8593;&#8594;&#8595;</b> Pfeiltasten bewegen das Sichtfeld</font><font face="Calibri"><br>
           Drehen des <b>Mausrads</b> zoomt heran und heraus<br>
-          <b>&#8592;</b> Backspace setzt den Zoom auf 100% zur&uuml;ck<br>
-          <b>Klick auf Mausrad</b> platziert Sp&auml;her auf Position des Mauszeigers 
-          um Map zu erkunden<br>
+          <b>&#8592; Backspace</b> setzt den Zoom auf 100% zur&uuml;ck<br>
           </font></p>
         <p><font face="Calibri"><B>Zus&auml;tzliche Karten installieren:</B><br>
           <B>1.</B> Erstellt einen Unterordner im Verzeichnis 'Maps' und bennent 
@@ -117,8 +101,8 @@
           neue Karte.txt&quot; anlegen, welche die Missionsbeschreibung<br>
           und andere Informationen enthalten wird. Benutzt das selbe Format wie 
           in den Missionen die das Remake<br>
-          anbietet. Keine offizielle Formatierung wird ver&ouml;ffentlicht, da 
-          sich das Format wahrscheinlich noch <br>
+          anbietet. Keine offizielle Formatierungsinformation wird ver&ouml;ffentlicht, da 
+          sich das Format sp&auml;ter wahrscheinlich noch <br>
           &auml;ndern wird.</font></p>
         <p><font face="Calibri"><b>Benutzerdefinierte Musik hinzuf&uuml;gen:</b><br>
           In das Verzeichnis 'Music' k&ouml;nnt ihr MP3-Dateien einf&uuml;gen, 
@@ -133,9 +117,7 @@
           </table>
         </blockquote>
         <P> <font face="Calibri"><B>Abst&uuml;rze ohne Benachrichtigung:</B><br>
-          KaM Remake st&uuml;rtzt beim Laden oder beim Wechseln der Musik ab, 
-          wenn es irgendwelche Probleme mit dem Windows Sound System gibt. Den 
-          Ordner 'Music' zu entfernen, sollte eine L&ouml;sung sein.<br>
+          Wenn das KaM Remake ohne Meldung während des Startens abstürzt, sendet uns bitte die Log-Datei (<a href="mailto:contact@kamremake.com">contact@kamremake.com</a>), sowie alle anderen Informationen, die ihr finden könnt und uns nützlich sein könnten.<br>
         </p>
         <p><B>Niedrige Framerate:</B><br>
           Falls das Programm eine niedrige Framerate hat, k&ouml;nnte es sein, 
@@ -146,21 +128,18 @@
         <p><B>Fehler im Spiel:</B><br>
           Manchmal wenn etwas Unerwartetes passiert, bekommt ihr eine Fehlermeldung 
           &quot;An error has occoured during <br>
-          gameplay&quot;. Please read the message details and send the crash report ZIP file from 
-		  the Crash Reports folder by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a> 
-          oder <a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>). Teilt<br>
+          gameplay&quot;. Bitte lest die Meldungsdetails genau und sendet eine Email mit der Crash Report zip-Datei an uns <a href="mailto:contact@kamremake.com">contact@kamremake.com</a>. Teilt<br>
           uns mit was ihr gemacht habt bevor die Fehlermeldung kam und schreibt 
           m&ouml;glicherweise andere Informationen<br>
           dazu, die uns von Nutzen sein k&ouml;nnen.<br>
         </p>
         <p><B>Assertion failed:</B><br>
-          Auch erscheint manchmal eine &quot;Assertion failed&quot;-Nachricht. 
+          Manchmal erscheint eine &quot;Assertion failed&quot;-Nachricht. 
           In diesem Fall solltet ihr KaM_Remake mit dem Task Manager (dr&uuml;ckt 
           Strg+Alt+Enf) beenden.<br>
-          Dann geht in das KaM Remake-Verzeichnis und findet die Datei 'KaM.log'. 
+          Dann geht in das KaM Remake-Verzeichnis und findet die Datei 'KaM.log' (die höchste Nummer sollte die neuste Log-Datei sein). 
           Sie beinhaltet Details des Absturzes. Bitte sendet die Datei per E-Mail 
-          an Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) 
-          oder Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>). 
+          an <a href="mailto:contact@kamremake.com">contact@kamremake.com</a>. 
           H&auml;ngt bitte auch die Replay-Dateien an.</font><br>
           &nbsp;</P>
         <blockquote> 
@@ -174,25 +153,24 @@
         </blockquote>
         <p><font face="Calibri">
           Es k&ouml;nnen noch keine Einheiten in Kriegswerkstatt und Rathaus ausgebildet werden.<br>
-          AI behavior is still limited.<br>
+          verhalten der Ki ist nach wie vor begrenzt.<br>
           &nbsp;</font></p>
 		<blockquote>
 			<table border="0" cellspacing="0" cellpadding="0">
 				<tr>
 					<td>
 			<img border="0" src="Readme/GUI_0324.gif"></td>
-					<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Server">Dedicated Server</a></FONT></B></td>
+					<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Server">Dedizierter Server</a></FONT></B></td>
 				</tr>
 			</table>
 		</blockquote>
-		<font face="Calibri">Executables for the multiplayer dedicated server are included, available for Windows and Linux x86 and x86_64. The server listens for connections on a TCP port (56789 by default) and acts as a hub to trasfer the data between clients. The dedicated server does not understand gameplay, it simply moves packets around. The first client to join a room will be assigned hosting rights allowing them to setup the game. If that client disconnects, the next one in the list will be assigned hosting rights.<br>
-		The server can be configured from the file KaM_Remake_Settings.ini. (created on the first of the game or server) Options for the dedicated server are in the section [Server].<br>
-		To use in a LAN game, first make sure the server will not be published to the master server by setting "AnnounceDedicatedServer=0" in the INI file. (see above) Then start the dedicated server and ensure it is running properly (it should say "Listening on port 56789") Please ensure your firewall is allowing clients to connect to the server, by allowing TCP port 56789. (or whichever you chose) You may then connect to it from the same computer and/or other computers. (For the same computer, connect to the address 127.0.0.1 or localhost)<br>
-		To use on the internet, you must forward the port 56789 (or whichever you chose) from your router to your PC running the dedicated server. (for more information on port forwarding visit <a href="http://portforward.com/">http://portforward.com/</a>) Tell your friends to connect to your external IP address, is displayed to you on the homepage of <a href="http://portforward.com/">http://portforward.com/</a>. If you are playing on the same computer that is running the dedicated server, or on the same LAN, connect to its IP address as you would for a LAN game.
-
+		<font face="Calibri">Ausführbare Serverdateien für den Multiplayermodus sind sowohl für Windows, als auch für Linux (beide x86 und 64) vorhanden. Die dedizierten Server schauen nach Verbindungen auf dem TCP-Port (Standard 56789) und arbeiten wie ein Hub, um Daten zwischen den Clients hin und her zu schicken. Der Server versteht nichts vom eigentlichen Gameplay des Spiels, er verschickt nur Datenpakete. Der erste Client/Spieler, der einen Raum betritt erhält automatisch Rechte ein Onlinespiel zu konfigurieren und zu starten ("Chef"). Wenn dieser Client seine Verbindung verliert bzw. aussteigt, erhält der Nächste in der Liste diese Rechte.<br>
+		Der dedizierte Server kann in der Datei KaM_Remake_Settings.ini eingerichtet werden. Einstellungen für den Server befinden sich im Abschnitt [Server].<br>
+		Um das Ganze im Netzwerk zu spielen, m&uuml;sst ihr euch zuerst vergewissern, dass der Server durch das Setzen der Variable "AnnounceDedicatedServer=0" in der INI-Datei nicht parallel zum Master-Server erscheint. Startet dann den dedizierten Server und versichert euch, dass er korrekt funktioniert (das Fenster zeigt diese Meldung an "Listening on port 56789"). Beachtet, dass die Firewall den Port 56789 nicht blockieren darf. Dann könnt ihr den Server vom selben und/oder anderen Rechner/n starten (sofern der selbe Computer verwendet wird benutzt die Adresse 127.0.0.1 oder localhost).<br>
+		Für den Gebrauch über das Internet m&uuml;sst ihr den Port im Router freigeben (für weitere Informationen über Routerfreigaben, besucht <a href="http://portforward.com/">http://portforward.com/</a>). Sagt euren Freunden, sie sollen sich zu eurer externen IP-Adresse verbinden, diese wird auf der Homepage angezeigt <a href="http://portforward.com/">http://portforward.com/</a>. Wenn ihr auf dem selben Computer spielt, auf dem der dedizierte Server oder im selben Netzwerk, verbindet euch zur IP-Adresse wie als wenn ihr es bei einem LAN-Spiel machen würdet.
 		<br><br>
-		Note: The dedicated server is not required to play multiplayer. Clicking "Start Local Server" or "Start Internet Server" from the network menu has the same effect, except you must participate in the game and the server cannot be left to maintain itself. The dedicated server is only necessary if you want to provide a server without playing. The main purpose of the dedicated server is to allow servers to be hosted 24/7, which players can join and participate in any time they like. If you are able to provide this service we would be pleased.<br><br>
-		The Linux builds have been tested on Fedora and Ubuntu. Any queries or comments regarding the Linux builds should be sent to Lewin. (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)</font>
+		Hinweis: Der dedizierte Server wird nicht benötigt um im Multiplayermodus zu spielen. Im MP Menü auf "Starte lokalen Server" oder "Starte Internet Server" zu klicken, hat den selben Effekt. Außer du musst an einem Spiel teilnehmen, indem sich der Server nicht selbst verwalten kann. Der dedizierte Server wird nur benötigt, wenn du einen Server bereitstellen willst, ohne zu spielen. Der wichtigste Grund für den Einsatz eines dedizierten Servers ist das Anbieten eines 24/7 Hosts, bei dem sich Spieler jederzeit anmelden können. Wenn ihr in der Lage seid so einen Host anzubieten, würden wir uns sehr freuen.<br><br>
+		Die Linux Builds wurden auf Fedora und Ubuntu getestet. Sämtliche Rückfragen betreffend der Linux Build bitte an Lewin senden (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>).</font>
 		<br>&nbsp;
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -235,12 +213,10 @@
         <p><font face="Calibri">Leitender Programmierer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
           Programmierer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)</font><font face="Calibri"><br>
           Danke an Alex, der uns 2008 in das Core Design eingewiesen hat.<br>
-Thanks to StarGazer, who drew new cursors and icons for user interface<br>
+Danke an StarGazer, der neue Grafiken erstellt hat.<br>
           Gro&szlig;en Dank an die KaM Community und an ihre aktiven Mitglieder 
-          (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, 
-          Nick, Thunderwolf, Humbelum, Vas und viele mehr) daf&uuml;r dass sie uns beim Entschl&uuml;sseln 
+          (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf, Humbelum, Vas und viele mehr) daf&uuml;r dass sie uns beim Decodieren 
          halfen, uns Ratschl&auml;ge gaben und f&uuml;r ihr Engagement.<br>
-          Dieses Dokument wurde ins Deutsche &uuml;bersetzt von Vas (space_aber).<br>
           &nbsp;</font> </p>
 <blockquote> 
 	<table border="0" cellspacing="0" cellpadding="0">
@@ -253,11 +229,11 @@ Thanks to StarGazer, who drew new cursors and icons for user interface<br>
 
 <font face="Calibri">Kommerzieller Gebrauch ist verboten.<br>
 Alle benutzten Namen, Symbole oder andere, mit einem Copyright versehene, 
-Materialien sind Eigentum des jeweiligen Besitzers.Wir nehmen keine 
-Verantwortung f&uuml;r m&ouml;gliche Hardwaresch&auml;den. Weitergabe oder &Auml;hnliches dieser Modifikation ist ohne diese beiliegende ReadMe nicht erlaubt. Ihr k&ouml;nnt das Remake auf euren Server hochladen und ver&ouml;ffentlichen, aber bitte lasst es uns wissen.Wir gehen davon aus, dass ihr eine eigene lizensierte Kopie des Spiels Knights and Merchants haben, andernfalls solltet ihr das Spiel kaufen bevor ihr diese Modifikation benutzt.</font>
+Materialien sind Eigentum des jeweiligen Besitzers. Wir nehmen keine 
+Verantwortung f&uuml;r m&ouml;gliche Hardwaresch&auml;den. Weitergabe oder &Auml;hnliches dieser Modifikation ist ohne diese beiliegende Read-Me nicht erlaubt. Ihr k&ouml;nnt das Remake auf euren Server hochladen und ver&ouml;ffentlichen, aber bitte lasst es uns wissen. Wir gehen davon aus, dass ihr eine eigene lizensierte Kopie des Spiels Knights and Merchants habt, andernfalls solltet ihr das Spiel kaufen bevor ihr diese Modifikation benutzt.</font>
         </td>
     </tr>
 </table>
-<p>&nbsp; Translation made with help from The Knight</p></div>
+<p><font face="Calibri">Übersetzt von Vas & The Knight</font></p></div>
   </BODY>
 </HTML>
