Added Atoll maps and russian translations

--- a/Readme/Readme_rus.html
+++ b/Readme/Readme_rus.html
@@ -197,11 +197,11 @@ Linux версия была проверена на Fedora и Ubuntu. Любые вопросы или комментарии от
 </blockquote>
 
 <font face="Calibri">1. Коммерческое использование продукта запрещено.<br>
-2. Все использованные имена, символы или других защищенных авторскими правами материалов, являются их соответствующих владельцев.<br>
+2. Все использованные имена, символы или другие защищенные авторскими правами материалы, являются собственностью их владельцев.<br>
 3. Мы не несем ответственности, если данный мод (КаМ Ремейк) нанесет ущерб программному или аппаратному обеспечению Вашего компьютера.<br>
 4. По очевидным причинам, издание и/или распространение КаМ Ремейка, в любой форме, недопустимо без данного Readme файла.<br>
 5. Вы можете загрузить данный мод на ваш сайт/сервер/домашнюю страницу, но, пожалуйста, предварительно сообщите нам об этом.<br>
-6. Мы предполагаем, что Вы (пользователь/игрок) располагайте собственной лицензионной копией игры КАМ, в противном случае Вам следует купить игру, прежде чем Вы начнете играть в КаМ Ремейк. Невыполнение этого требования будет нарушением лицензионного соглашения.</font>
+6. Мы предполагаем, что Вы (пользователь/игрок) располагайте собственной лицензионной копией игры "Knights and Merchants: The Peasants Rebellion", в противном случае Вам следует купить игру, прежде чем Вы начнете играть в КаМ Ремейк. Невыполнение этого требования будет нарушением лицензионного соглашения.</font>
         </td>
     </tr>
 </table>
